--- a/Site/Presentation/Views/Shared/Partial/Js.cshtml
+++ b/Site/Presentation/Views/Shared/Partial/Js.cshtml
@@ -13,7 +13,7 @@
 <script src="@Url.Content("~/Assets/js/Back.js")?v=@Version.Name" type="text/javascript"></script>
 <script src="@Url.Content("~/Assets/js/Legend.js")?v=@Version.Name" type="text/javascript"></script>
 <script src="@Url.Content("~/Assets/js/Menu.js")?v=@Version.Name" type="text/javascript"></script>
-<script src="@Url.Content("~/Assets/js/SceneChanger.js")?v=@Version.Name" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/BlockChanger.js")?v=@Version.Name" type="text/javascript"></script>
 <script src="@Url.Content("~/Assets/js/FontResizer.js")?v=@Version.Name" type="text/javascript"></script>
 <script src="@Url.Content("~/Assets/js/Trigger.js")?v=@Version.Name" type="text/javascript"></script>
 
