--- a/Site/Presentation/Views/Season/Episode.cshtml
+++ b/Site/Presentation/Views/Season/Episode.cshtml
@@ -13,8 +13,8 @@
 	var topSelector =
 		new TopSelectorModel
 		{
-			Total = Model.Story.SceneList.Count,
-			Current = Convert.ToInt32(Model.ReadingScene[0]) - 97
+			Total = Model.Story.BlockList.Count,
+			Current = Convert.ToInt32(Model.ReadingBlock[0]) - 97
 		};
 
 	var github = "https://raw.githubusercontent.com/" + Config.Repo;
@@ -38,20 +38,20 @@
 	}
 </p>
 
-@Html.Partial("Partial/ChangeScene", topSelector)
+@Html.Partial("Partial/ChangeBlock", topSelector)
 
 @{
-	var lastScene = Model.Story.SceneList.Count - 1;
+	var lastBlock = Model.Story.BlockList.Count - 1;
 }
 
-<div class="scenes">
-	@for (var s = 0; s <= lastScene; s++)
+<div class="blocks">
+	@for (var s = 0; s <= lastBlock; s++)
 	{
-		var scene = Model.Story.SceneList[s];
+		var block = Model.Story.BlockList[s];
 		var trigger = false;
 
-		<div class="scene @if(scene.ID == Model.ReadingScene) { @("reading") }" id="Scene@(s)">
-			@foreach (var paragraph in scene.ParagraphTypeList)
+		<div class="block @if(block.ID == Model.ReadingBlock) { @("reading") }" id="Block@(s)">
+			@foreach (var paragraph in block.ParagraphTypeList)
 			{
 				var paragraphId = s + "_" + tellerCounter + "_" + talkCounter;
 
@@ -62,9 +62,9 @@
 
 							@("– ")
 
-							for (var p = 0; p < scene.TalkList[talkCounter].Pieces.Count; p++)
+							for (var p = 0; p < block.TalkList[talkCounter].Pieces.Count; p++)
 							{
-								var piece = scene.TalkList[talkCounter].Pieces[p];
+								var piece = block.TalkList[talkCounter].Pieces[p];
 								var pieceId = paragraphId + "_" + p;
 
 								var title = piece.Style == TalkStyle.Default 
@@ -89,7 +89,7 @@
 								}
 							}
 
-							@(" (" + scene.TalkList[talkCounter].Character + ")")
+							@(" (" + block.TalkList[talkCounter].Character + ")")
 
 							talkCounter++;
 
@@ -97,7 +97,7 @@
 
 						case ParagraphType.Teller:
 
-							foreach (var piece in scene.TellerList[tellerCounter].Pieces)
+							foreach (var piece in block.TellerList[tellerCounter].Pieces)
 							{
 								if (piece.Style == TellerStyle.Trigger)
 								{
@@ -125,7 +125,7 @@
 				</div>
 			}
 
-			@if (s == lastScene && Model.Story.LastScene != scene.ID)
+			@if (s == lastBlock && Model.Story.LastBlock != block.ID)
 			{
 				<div class="continue">Continua...</div>
 			}
@@ -138,6 +138,6 @@
 
 @Html.Partial("Partial/PrintSummary", Model.Story)
 
-@Html.Partial("Partial/ChangeScene", topSelector)
+@Html.Partial("Partial/ChangeBlock", topSelector)
 
 @Html.Partial("Partial/Sign")
