[SITE] intro: add start reading link

--- a/Site/Presentation/Assets/css/Main.css
+++ b/Site/Presentation/Assets/css/Main.css
@@ -44,6 +44,14 @@
 	margin-bottom: 100px;
 }
 
+.start-reading {
+	text-align: right;
+}
+
+	.start-reading a {
+		color: #800;
+	}
+
 .continue
 {
 	text-align: center;
