[SITE] social: add facebook like widget

--- a/Site/Presentation/Assets/css/screen_Main.css
+++ b/Site/Presentation/Assets/css/screen_Main.css
@@ -36,3 +36,9 @@ form .paragraph
 	font-size: 70%;
 	border-radius: 4px;
 }
+
+.fb-like {
+	margin: -50px 0 0px 0;
+	height: 50px;
+	overflow: hidden;
+}
