--- a/Site/Presentation/Views/Season/Partial/PrintSummary.cshtml
+++ b/Site/Presentation/Views/Season/Partial/PrintSummary.cshtml
@@ -1,13 +1,26 @@
-﻿@using DK.MVC.Authentication
+﻿@using DK.MVC.Authentication;
+@using Presentation.Helpers;
+
 @model Structure.Entities.System.Episode
 
-@if (!Authenticate.IsAuthenticated && Model.HasSummary()) {
-	<div class="just-print summary">
+@if (!Authenticate.IsAuthenticated && Model.HasSummary())
+{
+	var page = Model.BlockList.Sum(b => b.BrList.Count) + 1;
+	var style = page % 2 == 0 ? "even" : "odd";
+
+	<div class="just-print summary @($"page-{style}-item")">
+
+		@Html.Partial("Partial/PrintHeader", Model)
+
 		<p class="title">
 			Resumo do Capítulo
 		</p>
-	
+
 		@Model.Summary
+
+		@Html.Partial(
+			"Partial/PrintFooter",
+			new Footer(Model.Breaks, page)
+		)
 	</div>
 }
-
