[SITE] author: add edit pages

--- a/Site/Presentation/Assets/css/Author/screen_Form.css
+++ b/Site/Presentation/Assets/css/Author/screen_Form.css
@@ -4,7 +4,13 @@
 .absolute-header textarea
 {
 	background: none;
-	width: 580px;
+	width: 575px;
+}
+
+.main .page input
+{
+	margin-left: 78px;
+	padding-left: 7px;
 }
 
 .main input,
