[SITE] chore: add string interpolation

--- a/Site/Presentation/Views/Season/Author/Episode.cshtml
+++ b/Site/Presentation/Views/Season/Author/Episode.cshtml
@@ -3,7 +3,7 @@
 @model Presentation.Models.SeasonEditEpisodeModel
 
 @{
-	ViewBag.Title = String.Format("MEAK {0}{1} – {2}", Model.Story.Season, Model.Story, Model.Story.Title);
+	ViewBag.Title = $"MEAK {Model.Story.Season}{Model.Story} – {Model.Story.Title}";
 	Layout = "~/Views/Shared/_Layout.cshtml";
 
 	var route = new { episodeID = Model.Story.ID, seasonID = Model.Story.Season.ID };
