--- a/Site/Presentation/Views/Season/Summary.cshtml
+++ b/Site/Presentation/Views/Season/Summary.cshtml
@@ -2,7 +2,7 @@
 @model Presentation.Models.SeasonSeasonModel
 
 @{
-	ViewBag.Title = String.Format("MEAK – Temporada {0}", Model.Season);
+	ViewBag.Title = $"MEAK – Temporada {Model.Season}";
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
